# rust-api-demo

./: .env.example  .gitignore  Cargo.toml  README.md  users.db  users.db-shm  users.db-wal
migrations/: 20220212183619_users.up.sql
src/: db.rs  main.rs
src/models/: user_model.rs
src/services/: mod.rs  user_service.rs  user_service_test.rs
src/types/: types.rs
