[package]
name = "rust-api-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "sqlite", "runtime-async-std-native-tls" ] }
actix-web = "3"
dotenv_codegen = "0.15.0"
tokio = "0.2.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
